<resources>


    <string name="app_name">FitMeUp</string>
    <string-array name="gender_options">

        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="security_questions">
        <item>What is your favorite food?</item>
        <item>What is the name of your favorite movie?</item>
        <item>Where did you go on your first vacation?</item>
        <item>What was the name of your first teacher?</item>
        <item>What is the name of your first pet?</item>
    </string-array>
    <string-array name="health_problems_options">
        <item>Maintain a healthy lifestyle</item>
        <item> Gain muscle mass</item>
        <item> Lose weight</item>

    </string-array>
    <string name="toolbar_home_description">Home</string>
    <string name="toolbar_profile_description">Profile</string>
    <string name="toolbar_target_description">Target</string>
    <string name="toolbar_exercise_description">Exercise</string>
    <string name="toolbar_handshake_description">Handshake</string>
    <string name="reminderlogo">ReminderLogo</string>
    <string name="waterText">Water</string>
    <string name="waterlogo">waterLogo</string>
    <string name="front_body_description">Front view of the body model</string>
    <string name="number_picker_formatter">%02d</string>
    <string name="forearm">Forearm</string>
    <string name="seven_packs">seven_packs</string>
    <string name="legs">legs</string>
    <string name="chest">chest</string>
    <string name="back_hand">back_hand</string>
    <string name="back">back</string>
    <string name="shoulder">shoulder</string>

    <string name="front_body">front body</string>
    <string name="watch_video">Watch Video</string>
    <string name="exercise_name">Exercise Name</string>
    <string-array name="time_options">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>3 Months</item>
        <item>6 Months</item>
        <item>Year</item>


</string-array>
    <string name="set_reminder">SET REMINDER</string>
    <string name="sub_reminder">Keep focus on your health!</string>
    <string name="add_new_reminder">Add a new reminder</string>
    <string name="back_button_description">back_to_homePage</string>
    <string name="pen">\"pen\"</string>
</resources>