<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Example Muscle Button for Triceps -->
    <ImageView
        android:id="@+id/back_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        android:src="@drawable/backbody" />

    <Button
        android:id="@+id/back_hand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginStart="90dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/button_background"
        android:text="@string/back_hand"
        android:textColor="#546E7A" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginStart="170dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/button_background"
        android:text="@string/back"
        android:textColor="#546E7A" />

    <Button
        android:id="@+id/shoulder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginStart="240dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/button_background"
        android:text="@string/shoulder"
        android:textColor="#546E7A" />



</FrameLayout>
