<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <ImageButton
                android:id="@+id/reminder"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="362dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="679dp"
                android:background="@drawable/notification"
                android:contentDescription="@string/reminderlogo"
                android:scaleType="fitXY" />

            <Button
                android:id="@+id/water"
                android:layout_width="400dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="34dp"
                android:layout_marginTop="362dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="@color/white_transparent_50"
                android:padding="16dp"
                android:theme="@style/Widget.AppCompat.Button"
                app:cornerRadius="16dp" />


            <ImageButton
                android:id="@+id/waterImage"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="69dp"
                android:layout_marginTop="374dp"
                android:layout_marginEnd="297dp"
                android:layout_marginBottom="309dp"
                android:background="@drawable/water"
                android:contentDescription="@string/waterlogo"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="53dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="71dp"
                android:layout_marginTop="430dp"
                android:layout_marginEnd="292dp"
                android:layout_marginBottom="282dp"
                android:text="@string/waterText" />


            <TextView
                android:id="@+id/amountDrink"
                android:layout_width="39dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="233dp"
                android:layout_marginTop="387dp"
                android:layout_marginEnd="139dp"
                android:layout_marginBottom="312dp"
                android:text="6/"
                android:textColor="#B4B0B0"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/amountSpouse"
                android:layout_width="20dp"
                android:layout_height="31dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="264dp"
                android:layout_marginTop="387dp"
                android:layout_marginEnd="125dp"
                android:layout_marginBottom="312dp"
                android:text="8"
                android:textColor="#B4B0B0"
                android:textSize="30dp" />

            <Button
                android:id="@+id/record_workout"
                android:layout_width="400dp"
                android:layout_height="100dp"
                android:layout_alignTop="@+id/water"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="34dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="@color/white_transparent_50"
                android:padding="16dp"
                app:cornerRadius="16dp" />

            <ImageButton
                android:id="@+id/barbell"
                android:layout_width="48dp"
                android:layout_height="45dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="64dp"
                android:layout_marginTop="487dp"
                android:layout_marginEnd="299dp"
                android:layout_marginBottom="196dp"
                android:background="@drawable/barbell"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/RecordWorkoutText"
                android:layout_width="109dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="45dp"
                android:layout_marginTop="541dp"
                android:layout_marginEnd="256dp"
                android:layout_marginBottom="171dp"
                android:text="Record Workout" />

            <EditText
                android:id="@+id/noteText"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/bottom_toolbar"
                android:layout_marginStart="34dp"
                android:layout_marginTop="594dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="22dp"
                android:ems="10"
                android:hint="Tell us about your day!"
                android:inputType="text" />




            <androidx.appcompat.widget.Toolbar
                android:id="@+id/bottom_toolbar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp"
                android:background="@color/white_transparent_50"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <!-- Centered Image Button -->
                <ImageButton
                    android:id="@+id/toolbar_home"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/home"
                    android:contentDescription="@string/toolbar_home_description"
                    android:scaleType="fitXY" />

                <ImageButton
                    android:id="@+id/toolbar_profile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/profile"
                    android:contentDescription="@string/toolbar_profile_description"
                    android:scaleType="fitXY" />

                <ImageButton
                    android:id="@+id/toolbar_target"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/target"
                    android:contentDescription="@string/toolbar_target_description"
                    android:scaleType="fitXY" />

                <ImageButton
                    android:id="@+id/toolbar_exercise"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/exercise"
                    android:contentDescription="@string/toolbar_exercise_description"
                    android:scaleType="fitXY" />

                <ImageButton
                    android:id="@+id/toolbar_handshake"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/handshake"
                    android:contentDescription="@string/toolbar_handshake_description"
                    android:scaleType="fitXY" />


            </androidx.appcompat.widget.Toolbar>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>




