<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".community_activity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="Community"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#792E85"
        android:background="@color/white_transparent_50"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"

    />

    <LinearLayout
        android:id="@+id/postInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/text_input"
            android:layout_width="0dp"
            android:layout_height="59dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:hint="Write a post..."
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:padding="8dp" />

        <Button
            android:id="@+id/Postbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add"
            android:backgroundTint="#792E85"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/postInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintVertical_bias="0.0"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Your ListView here -->
            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="598dp"
                android:dividerHeight="10dp"
                android:divider="@android:color/white"
                />


        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bottom_toolbar"
        android:layout_width="408dp"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white_transparent_50"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postInputLayout"
        app:layout_constraintVertical_bias="0.952"
        tools:ignore="MissingConstraints">

        <!-- Centered Image Button -->
        <ImageButton
            android:id="@+id/toolbar_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/home"
            android:contentDescription="@string/toolbar_home_description"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/toolbar_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="30dp"
            android:background="@drawable/profile"
            android:contentDescription="@string/toolbar_profile_description"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/toolbar_target"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="20dp"
            android:background="@drawable/target"
            android:contentDescription="@string/toolbar_target_description"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/toolbar_exercise"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="30dp"
            android:background="@drawable/exercise"
            android:contentDescription="@string/toolbar_exercise_description"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/toolbar_handshake"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="30dp"
            android:background="@drawable/handshake"
            android:contentDescription="@string/toolbar_handshake_description"
            android:scaleType="fitXY" />


    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>