<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:clipChildren="false"
    android:clipToPadding="false">

    <ScrollView
        android:id="@+id/rn9i2lj5olg"
        android:layout_width="match_parent"
        android:layout_height="760dp"
        android:layout_weight="1"
        android:background="@drawable/cr50bffffff"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:elevation="4dp"
        android:paddingBottom="44dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rfacddfkk3vn_rl"
                android:layout_width="match_parent"
                android:layout_height="479dp"
                android:layout_marginBottom="19dp"
                android:clipChildren="false"
                android:clipToPadding="false">

                <ImageView
                    android:id="@+id/rfacddfkk3vn"
                    android:layout_width="match_parent"
                    android:layout_height="479dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/imageworkout" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:paddingHorizontal="30dp"
                    android:paddingTop="18dp"
                    android:paddingBottom="433dp">

                    <RelativeLayout
                        android:id="@+id/rxqyz925nkoi"
                        android:layout_width="38dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="55dp"
                        android:clipChildren="false"
                        android:clipToPadding="false">

                        <ImageView
                            android:id="@+id/backButton"
                            android:layout_width="32dp"
                            android:layout_height="27dp"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="-3dp"
                            android:layout_marginBottom="0dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/back" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/rma3vlpkb9bb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:layout_weight="1"
                        android:text="Active Workout"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/workOutType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Workout Type"
                    android:textColor="#000000"
                    android:textSize="24sp" />
            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:clipChildren="false"
                android:clipToPadding="false" />

            <LinearLayout
                android:id="@+id/indicatorLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/save_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_save"
                android:scaleType="fitXY" />

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/white_transparent_50"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_gravity="bottom">

        <ImageButton
            android:id="@+id/toolbar_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/home"
            android:contentDescription="@string/toolbar_home_description"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/toolbar_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="30dp"
            android:background="@drawable/profile"
            android:contentDescription="@string/toolbar_profile_description"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/toolbar_target"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="20dp"
            android:background="@drawable/target"
            android:contentDescription="@string/toolbar_target_description"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/toolbar_exercise"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="30dp"
            android:background="@drawable/exercise"
            android:contentDescription="@string/toolbar_exercise_description"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/toolbar_handshake"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="30dp"
            android:background="@drawable/handshake"
            android:contentDescription="@string/toolbar_handshake_description"
            android:scaleType="fitXY" />
    </androidx.appcompat.widget.Toolbar>

</LinearLayout>
